--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,9 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
+        < p class = "view"> <a href = "{{chowdhury.pa@northeastern.edu}}"> Email: chowdhury.pa@northeastern.edu </p>
+        <!-- <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p> -->
+        {% endif %} 
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
