--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+{% seo %}
+    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <![endif]-->
+    {% include head-custom.html %}
+    
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+
+        {% if site.logo %}
+          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        {% endif %}
+
+        <p>{{ site.description | default: site.github.project_tagline }}</p>
 </head>
 <body>
     <header>
@@ -21,16 +40,9 @@
             <li><a href="https://github.com/yourusername"><i class="fab fa-github"></i> View my GitHub profile</a></li>
             <li><a href="https://twitter.com/yourusername"><i class="fab fa-twitter"></i> Follow me on Twitter</a></li>
             <li><a href="https://linkedin.com/in/yourusername"><i class="fab fa-linkedin"></i> Connect on LinkedIn</a></li>
+            <li><a href="mailto:youremail@example.com"><i class="fas fa-envelope"></i> Email me</a></li>
         </ul>
         <!-- Conditional Downloads Section -->
         {% if site.show_downloads %}
         <ul class="downloads">
-            <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-            <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-            <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
-    </footer>
-</body>
-</html>
-
+            <
