--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
       {% endif %}
 
       {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+      <!--  <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p> -->
       {% endif %}
 
       {% if site.show_downloads %}
@@ -46,18 +46,18 @@
     <section>
       {{ content }}
     </section>
-
-    <footer>
-      <p>&copy; 2024 Pabitra Chowdhury</p>
-      <!-- Social Media Links -->
-      <ul class="social-links">
-        <li><a href="https://github.com/PABITRAECO"><i class="fab fa-github"></i> View my GitHub profile</a></li>
-        <li><a href="https://twitter.com/pabitrachowdhu8"><i class="fab fa-twitter"></i> Follow me on Twitter</a></li>
-        <li><a href="https://linkedin.com/in/pabitra-chowdhury-54b038138"><i class="fab fa-linkedin"></i> Connect on LinkedIn</a></li>
-        <li><a href="mailto:chowdhury.pa@northeastern.edu"><i class="fas fa-envelope"></i> Email me</a></li>
-      </ul>
-    </footer>
   </div>
+
+  <footer>
+    <p>&copy; 2024 Pabitra Chowdhury</p>
+    <!-- Social Media Links -->
+    <ul class="social-links">
+      <li><a href="https://github.com/PABITRAECO"><i class="fab fa-github"></i> View my GitHub profile</a></li>
+      <li><a href="https://twitter.com/pabitrachowdhu8"><i class="fab fa-twitter"></i> Follow me on Twitter</a></li>
+      <li><a href="https://linkedin.com/in/pabitra-chowdhury-54b038138"><i class="fab fa-linkedin"></i> Connect on LinkedIn</a></li>
+      <li><a href="mailto:chowdhury.pa@northeastern.edu"><i class="fas fa-envelope"></i> Email me</a></li>
+    </ul>
+  </footer>
 
   <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
 </body>
