--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,10 +52,9 @@
  
     <!-- Social Media Links -->
     <ul class="social-links">
-      <li><a href="https://github.com/PABITRAECO"><i class="fab fa-github"></i> View my GitHub profile</a></li>
-      <li><a href="https://twitter.com/pabitrachowdhu8"><i class="fab fa-twitter"></i> Connect on Twitter</a></li>
-      <li><a href="https://linkedin.com/in/pabitra-chowdhury-54b038138"><i class="fab fa-linkedin"></i> Connect on LinkedIn</a></li>
-      <li><a href="mailto:chowdhury.pa@northeastern.edu"><i class="fas fa-envelope"></i> Email me</a></li>
+      <li><a href="https://github.com/PABITRAECO"><i class="fab fa-github"></i> GitHub </a></li>
+      <li><a href="https://twitter.com/pabitrachowdhu8"><i class="fab fa-twitter"></i> Twitter</a></li>
+      <li><a href="https://linkedin.com/in/pabitra-chowdhury-54b038138"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
     </ul>
 
   <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
