--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,11 +49,13 @@
 
   </section>
   <footer>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
  
     <!-- Social Media Links -->
     <ul class="social-links">
       <li><a href="https://github.com/PABITRAECO"><i class="fab fa-github"></i> GitHub </a></li>
-      <li><a href="https://twitter.com/pabitrachowdhu8"><i class="fab fa-twitter"></i> Twitter</a></li>
+      <li><a href="https://twitter.com/pabitrachowdhu8"><i class="fab fa-twitter"></i> <ion-icon name="logo-twitter"></ion-icon></a></li>
       <li><a href="https://linkedin.com/in/pabitra-chowdhury-54b038138"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
     </ul>
 
