--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,9 +54,9 @@
  
     <!-- Social Media Links -->
     <ul class="social-links">
-      <li><a href="https://github.com/PABITRAECO" target="_blank" ><i class="fab fa-github"></i> <ion-icon name="logo-github"></ion-icon> </a></li>
-      <li><a href="https://twitter.com/pabitrachowdhu8" target = "_blank"><i class="fab fa-twitter"></i> <ion-icon name="logo-twitter"> </ion-icon></a></li>
-      <li><a href="https://linkedin.com/in/pabitra-chowdhury-54b038138" target = "_blank"><i class="fab fa-linkedin"></i> <ion-icon name="logo-linkedin"></ion-icon> </a></li>
+      <a href="https://github.com/PABITRAECO" target="_blank" ><i class="fab fa-github"></i> <ion-icon name="logo-github"></ion-icon> </a>
+      <a href="https://twitter.com/pabitrachowdhu8" target = "_blank"><i class="fab fa-twitter"></i> <ion-icon name="logo-twitter"> </ion-icon></a>
+      <a href="https://linkedin.com/in/pabitra-chowdhury-54b038138" target = "_blank"><i class="fab fa-linkedin"></i> <ion-icon name="logo-linkedin"></ion-icon> </a>
     </ul>
 
   <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
