--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,13 @@
       {{ content }}
 
   </section>
+
+   <style>
+        .icon {
+            font-size: 2em; /* Adjust this value to change the size of the icons */
+        }
+    </style>
+    
   <footer>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
