--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,13 +49,15 @@
 
   </section>
 
-   <style>
+  
+    
+  <footer>
+ <style>
         .icon {
-            font-size: 2em; /* Adjust this value to change the size of the icons */
+            font-size: 5em; 
         }
     </style>
     
-  <footer>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
  
