--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,15 +49,15 @@
 
   </section>
 
-  
-    
-  <footer>
- <style>
-        .icon {
+   <style>
+        .ion-icon {
             font-size: 5em; 
         }
     </style>
     
+    
+  <footer>
+
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
  
