--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,8 @@
   </section>
 
    <style>
-        .ion-icon {
-            font-size: 5em; 
+        .social-icon {
+            font-size: 3em; 
         }
     </style>
     
@@ -62,7 +62,7 @@
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
  
     <!-- Social Media Links -->
-    <ul class="social-links">
+    <ul class="social-icon">
       <a href="https://github.com/PABITRAECO" target="_blank" ><i class="fab fa-github"></i> <ion-icon name="logo-github"></ion-icon> </a>
       <a href="https://twitter.com/pabitrachowdhu8" target = "_blank"><i class="fab fa-twitter"></i> <ion-icon name="logo-twitter"> </ion-icon></a>
       <a href="https://linkedin.com/in/pabitra-chowdhury-54b038138" target = "_blank"><i class="fab fa-linkedin"></i> <ion-icon name="logo-linkedin"></ion-icon> </a>
